--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -29,11 +29,12 @@
     
     <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
     
+    <p class="mt-5 mb-3 text-muted"><span class="text-muted ">&copy; 2018<script>new Date().getFullYear()>2018&&document.write("-"+new Date().getFullYear());</script>, Jojo Computer Institute.</span></p>
   </form>
   
 </main>
 
-    <%- include('layouts/footer') %>
+    
     <%- include('layouts/scripts') %>
   </body>
   
