--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -8,28 +8,23 @@
     
 <main class="form-signin">
   <form>
-    <img class="mb-4" src="/img/icon.png" alt="" width="72" height="57">
+    <img class="mb-3" src="/img/icon.png" alt="" width="72" height="57">
     
-    <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+    <h3 class="h3 mb-3 fw-normal">Please sign in</h3>
 
-    <div class="form-floating">
-      <input type="username" class="form-control" id="floatingInput" placeholder="username">
-      <label for="floatingInput">Username or Email</label>
+    <div class="form-floating mb-2">
+      <input type="text" class="form-control" id="floatingInput" placeholder="username">
+      <label for="floatingInput">Username</label>
     </div>
-    <div class="form-floating">
+    <div class="form-floating mb-2">
       <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
       <label for="floatingPassword">Password</label>
     </div>
 
-    <!-- <div class="checkbox mb-3">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
-      </label>
-    </div> -->
     
     <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
     
-    <p class="mt-5 mb-3 text-muted"><span class="text-muted ">&copy; 2018<script>new Date().getFullYear()>2018&&document.write("-"+new Date().getFullYear());</script>, Jojo Computer Institute.</span></p>
+    <p class="mt-3 text-muted"><span class="text-muted ">&copy; 2018<script>new Date().getFullYear()>2018&&document.write("-"+new Date().getFullYear());</script>, Jojo Computer Institute.</span></p>
   </form>
   
 </main>
