--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,24 +13,24 @@
     <h3 class="h3 mb-2 fw-normal">Create Student Account</h3>
 
     <div class="form-floating mb-2">
-        <input type="number" class="form-control" id="floatingInput" placeholder="Regn No.">
-        <label for="floatingInput">Regn No.</label>
+        <input type="number" class="form-control" id="floatingRegn" placeholder="Regn No." name="regn">
+        <label for="floatingRegn">Regn No.</label>
       </div>
       <div class="form-floating mb-2">
-      <input type="text" class="form-control" id="floatingInput" placeholder="name">
-      <label for="floatingInput">Name</label>
+      <input type="text" class="form-control" id="floatingName" placeholder="name" name="name">
+      <label for="floatingName">Name</label>
     </div>
       <div class="form-floating mb-2">
-        <input type="text" class="form-control" id="floatingInput" placeholder="fname">
-        <label for="floatingInput">Father's name</label>
+        <input type="text" class="form-control" id="floatingFname" placeholder="fname" name="fname">
+        <label for="floatingFname">Father's name</label>
       </div>
     <div class="form-floating mb-2">
-      <input type="text" class="form-control" id="floatingPassword" placeholder="address">
-      <label for="floatingPassword">Address</label>
+      <input type="text" class="form-control" id="floatingAddress" placeholder="address" name="address">
+      <label for="floatingAddress">Address</label>
     </div>
     <div class="form-floating mb-2">
-      <input type="number" class="form-control" id="floatingPassword" placeholder="phone no.">
-      <label for="floatingPassword">Mobile No.</label>
+      <input type="number" class="form-control" id="floatingPhone" placeholder="phone no." name="phone">
+      <label for="floatingPhone">Mobile No.</label>
     </div>
 
    
