--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,48 +8,43 @@
     
 <main class="form-signin">
 
-  <form action="/users/register" method="POST" enctype="multipart/form-data">
-    
+  <form action="/users/register" method="POST">
+
     <img class="mb-3" src="/img/icon.png" alt="" width="72" height="57">
     
-    <h3 class="h3 mb-2 fw-normal">Create Student Account</h3>
+    <h3 class="h3 mb-3 fw-normal">Please sign in</h3>
 
     <div class="form-floating mb-2">
-        <input type="number" class="form-control" id="floatingRegn" placeholder="Regn No." name="regn">
-        <label for="floatingRegn">Regn No.</label>
+      <input type="text" class="form-control" id="floatingRegn" placeholder="regn" name="regn">
+      <label for="floatingRegn">Regn No.</label>
     </div>
-
     <div class="form-floating mb-2">
       <input type="text" class="form-control" id="floatingName" placeholder="name" name="name">
       <label for="floatingName">Name</label>
     </div>
-    
     <div class="form-floating mb-2">
-        <input type="text" class="form-control" id="floatingFname" placeholder="fname" name="fname">
-        <label for="floatingFname">Father's name</label>
+      <input type="text" class="form-control" id="floatingFname" placeholder="fname" name="fname">
+      <label for="floatingFname">Fname</label>
     </div>
-    
     <div class="form-floating mb-2">
       <input type="text" class="form-control" id="floatingAddress" placeholder="address" name="address">
       <label for="floatingAddress">Address</label>
     </div>
-    
     <div class="form-floating mb-2">
-      <input type="number" class="form-control" id="floatingPhone" placeholder="phone no." name="phone">
-      <label for="floatingPhone">Mobile No.</label>
+      <input type="text" class="form-control" id="floatingPhone" placeholder="phone" name="phone">
+      <label for="floatingPhone">Phone</label>
     </div>
 
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Register</button>
+    
+    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
     
     <p class="mt-3 text-muted"><span class="text-muted ">&copy; 2018<script>new Date().getFullYear()>2018&&document.write("-"+new Date().getFullYear());</script>, Jojo Computer Institute.</span></p>
-  
   </form>
   
 </main>
 
     
-  <%- include('layouts/scripts') %>
-  
-</body>
+    <%- include('layouts/scripts') %>
+  </body>
   
 </html>
