--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -7,17 +7,19 @@
 <body class="text-center">
     
 <main class="form-signin">
-  <form>
+
+  <form action="/posts/store" method="POST">
+
     <img class="mb-3" src="/img/icon.png" alt="" width="72" height="57">
     
     <h3 class="h3 mb-3 fw-normal">Please sign in</h3>
 
     <div class="form-floating mb-2">
-      <input type="text" class="form-control" id="floatingInput" placeholder="username">
-      <label for="floatingInput">Username</label>
+      <input type="text" class="form-control" id="floatingUsername" placeholder="username" name="username">
+      <label for="floatingUsername">Username</label>
     </div>
     <div class="form-floating mb-2">
-      <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+      <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
       <label for="floatingPassword">Password</label>
     </div>
 
