navbar added with list of student

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,7 +2,16 @@
 <html lang="en">
   
 <%- include('layouts/headers') -%>
-
+<style>
+  body {
+  /* display: flex;
+  align-items: flex-start; */
+  padding-top: 20px;
+  /* padding-bottom: 40px; */
+  background-color: #f5f5f5;
+}
+</style>
+<a href='/'>View All Student</a></span>
 
 <body class="text-center">
     
