--- a/views/layouts/headers.ejs
+++ b/views/layouts/headers.ejs
@@ -1,14 +1,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.83.1">
+    <meta name="description" content="Official Website of Jojo Computer Institute, Aizawl & Kolasib">
     <title>Jojo Computer Institute </title>
 
     <!-- Bootstrap core CSS -->
+  
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -27,9 +26,11 @@
 
 <!-- Custom styles for this template -->
 
-<link href="/css/signin.css" rel="stylesheet">
+<link href="/css/login.css" rel="stylesheet">
 
 <link href="/css/footer.css" rel="stylesheet">
+
+<link href="/css/style.css" rel="stylesheet">
 
 <link rel = "icon" type = "image/png" href = "/img/icon.png">
 
