--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,6 +2,15 @@
 <html lang="en">
   
 <%- include('layouts/headers') -%>
+<style>
+  body {
+  /* display: flex;
+  align-items: flex-start; */
+  padding-top: 20px;
+  /* padding-bottom: 40px; */
+  background-color: #f5f5f5;
+}
+</style>
 
 
 <body class="text-center">
