--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,47 +11,63 @@
   background-color: #f5f5f5;
 }
 </style>
-<a href='/'>View All Student</a></span>
+
 
 <body class="text-center">
-    
-<main class="form-signin">
+ 
+<main class="form-register">
 
   <form action="/users/register" method="POST">
 
     <img class="mb-3" src="/img/icon.png" alt="" width="72" height="57">
     
-    <h3 class="h3 mb-3 fw-normal">Please sign in</h3>
-
+      <span class="b"><a href='/'>View All Student</a></span>
+      <h5 class="h4 mb-3 fw-normal">Please Register Student as below</h5>
+      
+    
+<div class="row g-2">
+                                
     <div class="form-floating mb-2">
-      <input type="text" class="form-control" id="floatingRegn" placeholder="regn" name="regn">
-      <label for="floatingRegn">Regn No.</label>
+      <input type="text" class="form-control pl-3" id="floatingRegn" placeholder="regn" name="regn">
+      <label for="floatingRegn"> Regn No.</label>
     </div>
-    <div class="form-floating mb-2">
+    
+    <div class="form-floating mb-2 col-md">
       <input type="text" class="form-control" id="floatingName" placeholder="name" name="name">
       <label for="floatingName">Name</label>
     </div>
-    <div class="form-floating mb-2">
+    
+  
+    
+      
+    <div class="form-floating mb-2 col-md">
       <input type="text" class="form-control" id="floatingFname" placeholder="fname" name="fname">
       <label for="floatingFname">Fname</label>
     </div>
-    <div class="form-floating mb-2">
+    <div class="form-floating mb-2 col-12">
       <input type="text" class="form-control" id="floatingAddress" placeholder="address" name="address">
       <label for="floatingAddress">Address</label>
     </div>
-    <div class="form-floating mb-2">
+    
+  
+    
+    <div class="form-floating mb-2 col-md-6">
       <input type="text" class="form-control" id="floatingPhone" placeholder="phone" name="phone">
       <label for="floatingPhone">Phone</label>
     </div>
-    <div class="form-floating mb-2">
+    <div class="form-floating mb-2 col-md-6">
       <input type="password" class="form-control" id="floatingPassword" placeholder="password" name="password">
       <label for="floatingPassword">Password</label>
     </div>
-
     
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+    
+
+</div>
+    
+    <button class="w-100 btn btn-lg btn-primary" type="submit">Register</button>
     
     <p class="mt-3 text-muted"><span class="text-muted ">&copy; 2018<script>new Date().getFullYear()>2018&&document.write("-"+new Date().getFullYear());</script>, Jojo Computer Institute.</span></p>
+  
   </form>
   
 </main>
