--- a/views/editRegister.ejs
+++ b/views/editRegister.ejs
@@ -26,17 +26,18 @@
 
   <form action="/users/register" method="POST" autocomplete="off">
 
-  <input type="hidden" name="_id" aria-hidden="true">
     
-   <div class="row g-2">
+    <input type="hidden" name="_id" value="<%= students._id %>" aria-hidden="true">
+    
+<div class="row g-2">
                                 
     <div class="form-floating mb-2">
-      <input type="text" class="form-control pl-3" id="floatingRegn" placeholder="regn" name="regn" >
+      <input type="text" class="form-control pl-3" id="floatingRegn" placeholder="regn" name="regn" value= "<%= students.regn %>" >
       <label for="floatingRegn">Regn No.</label>
     </div>
     
     <div class="form-floating mb-2 col-md">
-      <input type="text" class="form-control" id="floatingName" placeholder="name" name="name" >
+      <input type="text" class="form-control" id="floatingName" placeholder="name" name="name" value= "<%= students.name %>">
       <label for="floatingName">Name</label>
     </div>
     
@@ -44,22 +45,22 @@
     
       
     <div class="form-floating mb-2 col-md">
-      <input type="text" class="form-control" id="floatingFname" placeholder="fname" name="fname" >
+      <input type="text" class="form-control" id="floatingFname" placeholder="fname" name="fname" value= "<%= students.fname %>">
       <label for="floatingFname">Father's Name</label>
     </div>
     <div class="form-floating mb-2 col-12">
-      <input type="text" class="form-control" id="floatingAddress" placeholder="address" name="address" >
+      <input type="text" class="form-control" id="floatingAddress" placeholder="address" name="address" value= "<%= students.address %>">
       <label for="floatingAddress">Address</label>
     </div>
     
   
     
     <div class="form-floating mb-2 col-md-6">
-      <input type="text" class="form-control" id="floatingPhone" placeholder="phone" name="phone" >
+      <input type="text" class="form-control" id="floatingPhone" placeholder="phone" name="phone" value= "<%= students.phone %>">
       <label for="floatingPhone">Phone</label>
     </div>
     <div class="form-floating mb-2 col-md-6">
-      <input type="password" class="form-control" id="floatingPassword" placeholder="password" name="password" >
+      <input type="password" class="form-control" id="floatingPassword" placeholder="password" name="password" value= "<%= students.password %>">
       <label for="floatingPassword">Password</label>
     </div>
     
@@ -67,7 +68,7 @@
 
 </div>
     
-    <button class="btn btn-lg btn-primary" type="submit">Register</button>
+    <button class="btn btn-lg btn-primary" type="submit">Update</button>
     
     <p class="mt-3 small"><span class="text-muted ">&copy; 2018<script>new Date().getFullYear()>2018&&document.write("-"+new Date().getFullYear());</script>, Jojo Computer Institute.</span></p>
   
