--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -1,5 +1,5 @@
  <!------------------------- navigation bar section ------------------->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <img src="/img/icon.png" alt="" width="50" height="40">
