--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,7 +12,7 @@
 
 <body class="text-center">
  
- <img src="/img/icon.png" alt="" width="72" height="57">
+ <a href="/"><img class="mb-3" src="/img/icon.png" alt="" width="72" height="57"></a>
  
  
 <main class="form-register">
