--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,7 +16,7 @@
 
   <form action="/auth/login" method="POST">
 
-    <img class="mb-3" src="/img/icon.png" alt="" width="72" height="57">
+    <a href="/"><img class="mb-3" src="/img/icon.png" alt="" width="72" height="57"></a>
     
     <h3 class="h3 mb-3 fw-normal">Please sign in</h3>
 
