login logout possible

--- a/views/stdList.ejs
+++ b/views/stdList.ejs
@@ -11,10 +11,12 @@
 
 <div class="d-flex justify-content-between mt-3 mb-2">
   <h4><%= viewTitle %></h4>
+  <% if(loggedIn) { %>
   <a class="btn  btn-warning btn-sm" href="/register"><i class="fa fa-plus"></i> Add New Student</a>
+  <% } %>
 </div>
 
-<table class="table table-hover border bg-white  text-center">
+<table class="table table-hover border bg-white  text-center shadow-sm">
   <thead>
     <tr>
       <th scope="col">Regn No.</th>
