--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="/img/icon.png" alt="" width="50" height="40">
+      <a href="/"><img src="/img/icon.png" alt="" width="50" height="40"></a>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -10,14 +10,9 @@
     <div class="collapse navbar-adjust navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Log In</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Sign Out</a>
-        </li>
+        
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             My Account
@@ -28,6 +23,16 @@
             <li><a class="dropdown-item" href="#">My Fee details</a></li>
           </ul>
         </li>
+        <% if(!loggedIn) { %>
+        <li class="nav-item">
+          <a class="nav-link btn btn-warning btn-sm text-white fw-bolder" href="/login">Log In</a>
+        </li>
+        <% } %>
+        <% if(loggedIn) { %>
+        <li class="nav-item">
+          <a class="nav-link btn btn-danger btn-sm text-light" href="/logout">Log Out</a>
+        </li>
+        <% } %>
       </ul>
     </div>
   </div>
