--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,7 +18,7 @@
 
     <a href="/"><img class="mb-3" src="/img/icon.png" alt="" width="72" height="57"></a>
     
-    <h3 class="h3 mb-3 fw-normal">Please sign in</h3>
+    <h3 class="h3 mb-3 fw-normal">Please Login</h3>
 
     <div class="form-floating mb-2">
       <input type="text" class="form-control" id="floatingUsername" placeholder="username" name="username">
@@ -30,7 +30,7 @@
     </div>
 
     
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+    <button class="w-100 btn btn-lg btn-primary" type="submit">Login</button>
     
     <p class="mt-3 text-muted"><span class="text-muted ">&copy; 2018<script>new Date().getFullYear()>2018&&document.write("-"+new Date().getFullYear());</script>, Jojo Computer Institute.</span></p>
   </form>
