--- a/views/editRegister.ejs
+++ b/views/editRegister.ejs
@@ -32,12 +32,12 @@
 <div class="row g-2">
                                 
     <div class="form-floating mb-2">
-      <input type="text" class="form-control pl-3" id="floatingRegn" placeholder="regn" name="regn" value= "<%= students.regn %>" >
+      <input type="text" class="form-control pl-3" id="floatingRegn" placeholder="regn" name="regn" value= "<%= students.regn %>" required>
       <label for="floatingRegn">Regn No.</label>
     </div>
     
     <div class="form-floating mb-2 col-md">
-      <input type="text" class="form-control" id="floatingName" placeholder="name" name="name" value= "<%= students.name %>">
+      <input type="text" class="form-control" id="floatingName" placeholder="name" name="name" value= "<%= students.name %>" required>
       <label for="floatingName">Name</label>
     </div>
     
@@ -45,22 +45,22 @@
     
       
     <div class="form-floating mb-2 col-md">
-      <input type="text" class="form-control" id="floatingFname" placeholder="fname" name="fname" value= "<%= students.fname %>">
+      <input type="text" class="form-control" id="floatingFname" placeholder="fname" name="fname" value= "<%= students.fname %>" required>
       <label for="floatingFname">Father's Name</label>
     </div>
     <div class="form-floating mb-2 col-12">
-      <input type="text" class="form-control" id="floatingAddress" placeholder="address" name="address" value= "<%= students.address %>">
+      <input type="text" class="form-control" id="floatingAddress" placeholder="address" name="address" value= "<%= students.address %>" required>
       <label for="floatingAddress">Address</label>
     </div>
     
   
     
     <div class="form-floating mb-2 col-md-6">
-      <input type="text" class="form-control" id="floatingPhone" placeholder="phone" name="phone" value= "<%= students.phone %>">
+      <input type="text" class="form-control" id="floatingPhone" placeholder="phone" name="phone" value= "<%= students.phone %>" required>
       <label for="floatingPhone">Phone</label>
     </div>
     <div class="form-floating mb-2 col-md-6">
-      <input type="password" class="form-control" id="floatingPassword" placeholder="password" name="password" value= "<%= students.password %>">
+      <input type="password" class="form-control" id="floatingPassword" placeholder="password" name="password" value= "<%= students.password %>" required>
       <label for="floatingPassword">Password</label>
     </div>
     
