--- a/views/loginStaff.ejs
+++ b/views/loginStaff.ejs
@@ -15,11 +15,11 @@
 <main class="form-signin">
   
 
-  <form action="/auth/login" method="POST" autocomplete="off">
+  <form action="/auth/loginStaff" method="POST" autocomplete="off">
 
     <a href="/"><img class="mb-3" src="/img/icon.png" alt="" width="72" height="57"></a>
     
-    <h3 class="h3 mb-3 fw-normal">Please Login</h3>
+    <h3 class="h3 mb-3 fw-normal"> Login for Jojo Staff</h3>
 
     <div class="form-floating mb-2">
       <input type="text" class="form-control" id="floatingUsername" placeholder="username" name="username" required>
