--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -1,7 +1,7 @@
 <!-- -----------------footer section-------------------------- -->
 
-<footer class="footer border-top">
-    <div class="text-center p-5 bg-light">
-      <span class="text-muted ">&copy; 2018<script>new Date().getFullYear()>2018&&document.write("-"+new Date().getFullYear());</script>, Designed and Developed By: Jojo Computer Institute..</span>
-    </div>
-  </footer>
+<footer class="footer border-top shadow d-flex justify-content-center bg-light p-3">
+  
+    <div class="text-muted small">&copy; 2018<script>new Date().getFullYear()>2018&&document.write("-"+new Date().getFullYear());</script>, Jojo Computer Institute.</div>
+    
+</footer>
