--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -1,8 +1,8 @@
  <!------------------------- navigation bar section ------------------->
-<nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
+<nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-      <a href="/"><img src="/img/icon.png" alt="" width="50" height="40"></a>
+    <a class="navbar-brand pt-0 pb-0" href="/">
+      <img src="/img/icon.png" alt="" width="40" height="32">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -14,9 +14,16 @@
         </li>
         
         <li class="nav-item dropdown">
+          <% if(!loggedIn) { %>
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             My Account
           </a>
+          <% } %>
+          <% if(loggedIn) { %>
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Hi, <b> <%= username %> </b>
+          </a>
+          <% } %>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <li><a class="dropdown-item" href="#">My Dashboard</a></li>
             <li><a class="dropdown-item" href="#">My Test Result</a></li>
@@ -30,7 +37,7 @@
         <% } %>
         <% if(loggedIn) { %>
         <li class="nav-item">
-          <a class="nav-link btn btn-danger btn-sm text-light" href="/logout">Log Out</a>
+          <a class="nav-link btn btn-danger btn-sm text-light" href="/auth/logout">Log Out</a>
         </li>
         <% } %>
       </ul>
