--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,20 +1,30 @@
 /*-----------------------footer section----------------------*/
-  body {
-    
-    margin-bottom: 0px; /* Margin bottom by footer height */
-    
-  }
+html {
   
-  .footer {
-    
-    position: absolute;
-    
-    bottom: 0;
-    
-    width: 100%;
-    
-    height: 50px; /* Set the fixed height of the footer here */
-    
-  }
+  position: relative;
   
-  /*-----------------------footer section--------------------------*/
+  min-height: 100%;
+  
+}
+
+body {
+  
+  margin-bottom: 120px; /* Margin bottom by footer height */
+  
+}
+
+.footer {
+  
+  position: absolute;
+  
+  bottom: 0;
+  
+  width: 100%;
+  
+  height: 50px; /* Set the fixed height of the footer here */
+  
+  background-color: #f5f5f5;
+  
+}
+
+/*-----------------------footer section--------------------------*/
