--- a/public/css/login.css
+++ b/public/css/login.css
@@ -17,3 +17,16 @@
 }
 
 
+/*-------------media query for video fullscreen-----------*/
+@media only screen and (max-width: 990px) {
+  .navbar-brand {
+  padding-left: 10px;
+  }
+  .navbar-adjust {
+  display: flex;
+  justify-content: flex-start;
+  padding-right: 10px;
+}
+}
+
+
