--- a/views/editRegister.ejs
+++ b/views/editRegister.ejs
@@ -1,71 +1,90 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="en">
   
 <%- include('layouts/headers') -%>
+
 <style>
+
   body {
+    
   padding-top: 20px;
+  
   background-color: #f5f5f5;
+  
 }
+
 </style>
 
 
 <body class="text-center">
  
- <img src="/img/icon.png" alt="" width="72" height="57">
- 
+ <a href="/"><img src="/img/icon.png" alt="" width="72" height="57"></a>
  
 <main class="form-register">
+  
   <div class="d-flex justify-content-between mb-3">
       
   <h5> <%= viewTitle -%></h5>
   
-  <a class="btn btn-warning btn-sm" href="/"><i class="fa fa-database"></i> View All Student</a>
+  <a class="btn btn-warning btn-sm" href="/stdList"><i class="fa fa-database"></i> View All Student</a>
   
 </div>
 
   <form action="/users/register" method="POST" autocomplete="off">
-
     
     <input type="hidden" name="_id" value="<%= students._id %>" aria-hidden="true">
     
-<div class="row g-2">
+  <div class="row g-2">
                                 
     <div class="form-floating mb-2">
-      <input type="text" class="form-control pl-3" id="floatingRegn" placeholder="regn" name="regn" value= "<%= students.regn %>" required>
-      <label for="floatingRegn">Regn No.</label>
-    </div>
-    
-    <div class="form-floating mb-2 col-md">
-      <input type="text" class="form-control" id="floatingName" placeholder="name" name="name" value= "<%= students.name %>" required>
-      <label for="floatingName">Name</label>
-    </div>
-    
-  
-    
       
+      <input type="text" class="form-control pl-3" id="floatingRegn" placeholder="regn" name="regn" value= "<%= students.regn %>" required>
+      
+      <label for="floatingRegn">Regn No.</label>
+      
+    </div>
+    
     <div class="form-floating mb-2 col-md">
+      
+      <input type="text" class="form-control" id="floatingUsername" placeholder="username" name="username" value= "<%= students.username %>" required>
+      
+      <label for="floatingUsername">Name</label>
+      
+    </div>
+    
+    <div class="form-floating mb-2 col-md">
+      
       <input type="text" class="form-control" id="floatingFname" placeholder="fname" name="fname" value= "<%= students.fname %>" required>
+      
       <label for="floatingFname">Father's Name</label>
+      
     </div>
+    
     <div class="form-floating mb-2 col-12">
+      
       <input type="text" class="form-control" id="floatingAddress" placeholder="address" name="address" value= "<%= students.address %>" required>
+      
       <label for="floatingAddress">Address</label>
+      
     </div>
     
-  
-    
     <div class="form-floating mb-2 col-md-6">
+      
       <input type="text" class="form-control" id="floatingPhone" placeholder="phone" name="phone" value= "<%= students.phone %>" required>
+      
       <label for="floatingPhone">Phone</label>
+      
     </div>
+  
     <div class="form-floating mb-2 col-md-6">
-      <input type="password" class="form-control" id="floatingPassword" placeholder="password" name="password" value= "<%= students.password %>" required>
-      <label for="floatingPassword">Password</label>
+      
+      <input type="date" class="form-control" id="floatingDate" placeholder="DOB" name="dob" value="<%= students.dob %>" required>
+      
+      <label for="floatingDate">Date of Birth</label>
+      
     </div>
     
-    
-
 </div>
     
     <button class="btn btn-lg btn-primary" type="submit">Update</button>
