--- a/views/layouts/studentNavbar.ejs
+++ b/views/layouts/studentNavbar.ejs
@@ -1,11 +1,10 @@
-<!------------------------- navigation bar section ------------------->
-
+ <!------------------------- navigation bar section ------------------->
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm sticky-top">
   
   <div class="container-fluid">
+    
+    <a class="navbar-brand fw-normal text-muted pt-0 pb-0" href="/">
       
-    <a class="navbar-brand fw-bold pt-0 pb-0" href="/">
-        
       <img src="/img/icon.png" alt="" width="40" height="32"> Jojo Computer Institute
       
     </a>
@@ -13,72 +12,78 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       
       <span class="navbar-toggler-icon"></span>
-      
     </button>
     
     <div class="collapse navbar-adjust navbar-collapse" id="navbarNavDropdown">
-        
+      
       <ul class="navbar-nav">
-          
+        
         <li class="nav-item">
-            
+          
           <a class="nav-link active" aria-current="page" href="/">Home</a>
           
         </li>
         
-        <li class="nav-item">
+          <li class="nav-item">
             
-          <a class="nav-link active" aria-current="page" href="/">Photos</a>
+          <a class="nav-link active" aria-current="page" href="#">Photos</a>
           
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">FAQ</a>
         </li>
         
-        <li class="nav-item dropdown">
-            
-          <% if(!loggedIn) { %>
+        <li class="nav-item">
           
-          <a type="button" class="nav-link dropdown-toggle btn btn-warning text-white fw-bold" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link active" aria-current="page" href="#">FAQ</a>
+          
+        </li>
+        
+        <% if(!loggedIn) { %>
+        
+        <li class="nav-item dropdown">
+          
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             
             Login
             
           </a>
           
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              
-            <li><a class="dropdown-item" href="/std/login"><i class="fas fa-user text-info"></i> Student Login</a></li>
             
-            <li><a class="dropdown-item" href="/auth/loginStaff"><i class="fas fa-sign-in-alt text-info"></i> Institute Login</a></li>
             
-          </ul>
-          
-        </li>
-          
-          <% } %>
-          <% if(loggedIn) { %>
-          
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              
-            Hi, <b> <%= username.toUpperCase() %> </b>
+            <li><a class="dropdown-item" href="/std/login"><i class="fas fa-user"></i> Student Login</a></li>
             
-          </a>
-         
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              
-            <li><a class="dropdown-item" href="<%= href1 %>"><i class="far fa-list-alt"></i> <%= link1 %></a></li>
-            
-            <li><a class="dropdown-item" href="<%= href2 %>"><i class="far fa-list-alt"></i> <%= link2 %></a></li>
-            
-            <li><a class="dropdown-item" href="<%= href3 %>"><i class="fas fa-rupee-sign"></i> <%= link3 %></a></li>
-            
-            <li><a class="dropdown-item" href="/auth/logout"><i class="fas fa-sign-out-alt"></i> <%= link4 %></a></li>
+            <li><a class="dropdown-item" href="/auth/loginStaff"><i class="fas fa-sign-in-alt"></i> Staff Login</a></li>
             
           </ul>
           
         </li>
         
-         <% } %>
+        <% } %>
+        
+        <% if(loggedIn) { %>
+        
+        <li class="nav-item dropdown">
+          
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            
+            Hi, <%= username %>
+            
+          </a>
+          
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            
+            <li><a class="dropdown-item" href="/all/stdDashboard"><i class="fas fa-th-list"></i> <%= dashboard %></a></li>
+            
+            <li><a class="dropdown-item" href="/all/testScore"><i class="fas fa-poll"></i> <%= testResult %></a></li>
+            
+            <li><a class="dropdown-item" href="/all/fee"><i class="fas fa-rupee-sign"></i> <%= myProfile %></a></li>
+            
+            <li><a class="dropdown-item" href="/auth/logout"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+            
+          </ul>
+          
+        </li>
+        
+        <% } %>
         
       </ul>
       
