--- a/views/loginStaff.ejs
+++ b/views/loginStaff.ejs
@@ -15,23 +15,29 @@
 <main class="form-signin">
   
 
-  <form action="/auth/loginStaff" method="POST" autocomplete="off">
+  <form action="/authUser/loginStaff" method="POST" autocomplete="off">
 
     <a href="/"><img class="mb-3" src="/img/icon.png" alt="" width="72" height="57"></a>
     
     <h3 class="h3 mb-3 fw-normal"> Login for Jojo Staff</h3>
 
     <div class="form-floating mb-2">
+      
       <input type="text" class="form-control" id="floatingUsername" placeholder="username" name="username" required>
+      
       <label for="floatingUsername">Username</label>
+      
     </div>
+    
     <div class="form-floating mb-2">
+      
       <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password" required>
+      
       <label for="floatingPassword">Password</label>
+      
     </div>
 
-    
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Login</button>
+    <button class="w-100 btn btn-success" type="submit">Staff Login</button>
     
     <p class="mt-3 text-muted"><span class="text-muted ">&copy; 2018<script>new Date().getFullYear()>2018&&document.write("-"+new Date().getFullYear());</script>, Jojo Computer Institute.</span></p>
   </form>
