--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -35,7 +35,7 @@
           <a class="nav-link active" aria-current="page" href="/">FAQ</a>
         </li>
         
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown ms-2">
             
           <% if(!loggedIn) { %>
           
