--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,4 @@
+
 .navbar {
   
   z-index: 1;
@@ -33,16 +34,30 @@
 }
 
 .navbar-adjust {
+  
   display: flex;
+  
   justify-content: flex-end;
+  
   padding-right: 100px;
 }
 
 
 .dropdown-item:hover {
+  
   border-top: 1px solid #f1f1f1;
+  
   border-bottom: 1px solid #f1f1f1;
 }
+
+.list-group .studentTable {
+  
+  border-right: 1px solid #ddd;
+  
+  border-left: 1px solid #ddd;
+  
+}
+
 
 /*-------------media query for video fullscreen-----------*/
 @media only screen and (max-width: 990px) {
